<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">trackGit</string>
    <string name="app_display_name">trackGit</string>
    <string name="action_settings">Settings</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_branch">Branch</string>
    <string name="action_filter">Filter</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="title_activity_post_login">Repositories</string>
    <string name="title_activity_pre_login">GitGet</string>
    <string name="branch_cancel">Cancel</string>
    <string name="notOnline">Not Connected to the Internet</string>
    <string name="online">Connection Established</string>
    <string name="refresh">Refresh</string>
    <string name="goOnline">Go Online</string>
    <string name="network_settings">Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Fragments Name Menu -->
    <string name="respositories">Repostiories</string>
    <string name="respositories_settings">Repostiories Settings</string>
    <string name="gists">Gists</string>
    <string name="issues">Issues</string>
    <string name="feeds">Feeds</string>
    <string name="public_events">Public Events</string>
    <string name="public_gist">Public Gists</string>
    <string name="sub_category_misc">Miscellaneous</string>
    <string name="sub_category_public">Public</string>
    <string name="share">Share</string>
    <string name="credits">Credits</string>
    <string name="Logout">Logout</string>
    <string name="Libraries">Libraries used:</string>

    <string name="commit_title">Commits</string>
    <string name="collaborators_title">Collaborators</string>
    <string name="issues_title">Issues</string>
    <string name="readme_title">ReadMe.md</string>

    <string name="branch_button">Branch</string>
    <string name="no_issues">No Issues opened/closed yet by You.</string>

    <!-- Right Drawer String Constants-->
    <string name="right_category_sort">Sort</string>
    <string name="right_category_order">Order</string>
    <string name="category_created">Created</string>
    <string name="category_comments">Comments</string>
    <string name="category_updated">Updated</string>
    <string name="category_ascending">Ascending</string>
    <string name="category_descending">Descending</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="yesterday">Yesterday</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="title_activity_repository_detail">RepositoryDetailActivity</string>
    <string name="title_activity_file_view">FileViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gists_file_source">GistsFileSourceActivity</string>

    <!-- Formatting for User Event Actions -->

    <!-- Fork Event -->
    <string name="fork_event">forked <b>%1$s</b> </string>
    <!-- Create Event -->
    <string name="create_event">created <b>%1$s</b></string>
    <!-- Delete Event -->
    <string name="delete_event">deleted <b>%1$s</b> at <b>%2$s</b></string>
    <!-- Deployment Event -->
    <string name="deployment_event">Deployment PlaceHolder Text</string>
    <!-- Gollum Event -->
    <string name="gollum_event"><b>%1$s</b> <b>%2$s</b> page at <b>%3$s</b></string>
    <!-- Issue Comment Event -->
    <string name="issue_comment_event"><b>%1$s</b> comment on issue
        <b>%2$s</b> at <b>%3$s</b></string>
    <!-- Issue Event -->
    <string name="issue_event"><b>%1$s</b> issue <b>%2$s</b> at <b>%3$s</b></string>
    <!-- Pull Request Event -->
    <string name="pull_request_event"><b>%1$s</b> pull request <b>%2$s</b> at<b>%3$s</b></string>
    <!-- Push Event -->
    <string name="push_event"><b>%1$s</b> pushed to <b>%2$s</b></string>
    <!-- Watch Event -->
    <string name="watch_event"><b>%1$s</b> starred <b>%2$s</b></string>
    <string name="title_activity_branch_dialog">Branches</string>
    <!-- Committed Action -->
    <string name="branch_commit"><b>%1$s</b> committed on <b>%2$s</b></string>

    <!-- Gists Formatted Strings  -->
    <!-- login/filename -->
    <string name="login_filename">%1$s/%2$s</string>
    <!-- created gist on -->
    <string name="created_gist">created on %1$s</string>
    <!-- number of files -->
    <string name="num_files">%1$s files</string>
    <!-- number of forks -->
    <string name="num_forks">%1$s forks</string>
    <!-- number of comments -->
    <string name="num_comments">%1$s comments</string>
    <!-- number of forks -->
    <string name="num_stars">%1$s stars</string>

    <string name="followers">Followers</string>
    <string name="starred">Starred</string>
    <string name="following">Following</string>

    <string name="SearchHint">Search for Users</string>
    <string name="SearchEmtpy">No Results Found</string>
    <string name="SearchIsOffline">Search is Offline</string>
    <string name="title_widget_repo">Repositories</string>

    <!-- Transition Names below this -->
    <string name="userAvatarTransition">user_avatar_transition</string>
    <string name="searchIconTransition">search_icon_transition</string>

    <!-- Settings Preferences key strings -->
    <string name="pref_repositories">Settings</string>
    <string name="pref_repositories_sort_default">updated</string>
    <string name="pref_repositories_sort">Sort By</string>
    <string name="pref_repositories_type_default">all</string>
    <string name="pref_repositories_type">Type</string>
    <string name="pref_repositories_direction_default">descending</string>
    <string name="pref_repositories_direction">Order</string>
    <string name="pref_repositories_visibility_default">all</string>
    <string name="pref_repositories_visibility">Visibility</string>

    <!-- Issues Menu -->
    <string name="issues_menu_sort">SORT</string>
    <string name="issues_sort_comments">COMMENTS</string>
    <string name="issues_sort_created">CREATED</string>
    <string name="issues_sort_updated">UPDATED</string>
    <string name="issues_placeholder_description"> No Description Provided</string>

    <!-- Add all Content Descriptions below this line -->
    <string name="branch_committer_img_desc">This is the committer\'s avatar</string>
    <string name="title_activity_file_list_view">FileListViewActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="userIcon_desc">This is the User Avatar</string>
    <string name="IssueIcon_desc">This is the Issues Icon</string>
    <string name="title_activity_search_git">SearchGitActivity</string>
    <string name="title_activity_public_user_repo">PublicUserRepoActivity</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="fab_placeholder">Placeholder fab not being used right now</string>
    <string name="fab_search">Search Floating Action Button</string>
    <string name="repo_fab">Repositories FAB</string>
    <string name="network_settings_button">Open Network Settings</string>
    <string name="login_button">Press to Login</string>
    <string name="stars_img">Stars</string>
    <string name="forks_img">Forks</string>
    <string name="watchers_img">Watchers</string>
    <string name="files_img">Files Icon</string>
    <string name="branch_expand">Expand Branch for Details</string>
    <string name="title_activity_markdown_view">MarkdownViewActivity</string>
    <string name="title_activity_issue">IssueActivity</string>
    <string name="placeholder_desc">Placeholder description</string>
    <string name="filter_menu">Filter Menu Button</string>


</resources>
