<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/issue_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/item_verticl_margin_small">

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/issue_desc_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/item_horizontal_margin_small">

                        <ImageView
                            android:id="@+id/issue_avatar"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:contentDescription="@string/userIcon_desc" />

                        <us.feras.mdv.MarkdownView
                            android:id="@+id/issue_body_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:paddingEnd="0dp"
                            android:paddingLeft="@dimen/widget_margin_large"
                            android:paddingRight="0dp"
                            android:paddingStart="@dimen/widget_margin_large"
                            android:text="@string/issues_placeholder_description"
                            android:textAlignment="textStart"
                            android:textColor="@color/bluegrey800"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/issue_labels_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/issue_desc_linearLayout"
                        android:baselineAligned="true"
                        android:orientation="horizontal"
                        android:padding="@dimen/item_horizontal_margin_normal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/placeholder_desc"
                            android:src="@drawable/ic_tags_vector" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/labels_listView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_horizontal_margin_normal">

                <com.example.gaurav.gitfetchapp.CustomViews.DrawLine
                    android:id="@+id/line_drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/issue_events_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/issues_comments_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

</android.support.v4.widget.NestedScrollView>